Объект состояния обёрнут в отдельный тип, чтобы больше абстрагироваться от базового типа словаря. Также это помогло уменьшить данные при сериализации

--- a/WebPageFramework/WebPageFramework.vbproj
+++ b/WebPageFramework/WebPageFramework.vbproj
@@ -4,6 +4,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>WebPages</RootNamespace>
     <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>Latest</LangVersion>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
