--- a/WebPageFramework/WebPages.Core.vbproj
+++ b/WebPageFramework/WebPages.Core.vbproj
@@ -6,11 +6,30 @@
     <TargetFramework>net8.0</TargetFramework>
     <LangVersion>Latest</LangVersion>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>WebPages Framework</Title>
+    <PackageProjectUrl>https://github.com/VSVLAD/WebPageFramework</PackageProjectUrl>
+    <Copyright>https://github.com/VSVLAD/WebPageFramework?tab=MIT-1-ov-file</Copyright>
+    <Description>WebPage is a project which is inspired by WebForms for .NET Core</Description>
+    <RepositoryUrl>https://github.com/VSVLAD/WebPageFramework</RepositoryUrl>
+    <PackageTags>WebForms;WebPages;ViewState;PostBack</PackageTags>
+    <Product>WebPages</Product>
+    <Company>VS Project ©</Company>
+    <Version>1.0.0.0</Version>
+    <Authors>Vladilen</Authors>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Content Include="WebPagesMiddlewareExtensions.vb" />
     <Content Include="WebPagesMiddleware.vb" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
